--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,63 @@
-# Prerequisites
-*.d
+# Editor files #
+################
+.vscode/
+*.swp
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
+# TeX intermediate files #
+##########################
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
+*.aux
+*.el
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
+# Build files #
+###############
+testbin/
+bin/
+lib/
+build/
+buildfiles/
+CMakeFiles/
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# Build file on BSD #
+#####################
+*.core
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.out
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+*.swp
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
